# Projects

./: .gitignore  README.md
.claude/: settings.local.json
beta-2.0/PerlinNoiseVisualizer/: CMakeLists.txt  biome.cpp  biome.h  build.bat  main.cpp  noise2D.cpp  noise2D.h  perlinNoiseManagement.cpp  perlinNoiseManagement.h  recipe.txt  run.bat  scene.cpp  scene.h
beta-2.0/PerlinNoiseVisualizer/information/: api_reference.md  architecture.md  build.md
beta-2.0/VisualEngine/: VisualEngine.cpp  VisualEngine.h
beta-2.0/VisualEngine/information/: api_reference.md
beta-2.0/VisualEngine/inputManagement/: Camera.cpp  Collision.h
beta-2.0/VisualEngine/memoryManagement/: ModelData.h  memory.cpp
beta-2.0/VisualEngine/renderingManagement/: DefaultShaders.h  Mesh.cpp  RenderLoop.cpp  Scene.cpp  Texture.cpp  render.h
beta-2.0/VisualEngine/renderingManagement/effects/: GradientBackground.cpp
beta-2.0/VisualEngine/renderingManagement/meshing/: ChunkMesh.cpp  ChunkMesh.h  Greedy.h
beta-2.0/VisualEngine/renderingManagement/primitives/: DotRenderer.cpp  LineRenderer.cpp
beta-2.0/VisualEngine/sceneManagement/: SceneManager.cpp  SceneManager.h
beta-2.0/VisualEngine/uiManagement/: TextRenderer.cpp  UIElement.h  UIManager.cpp  UIRenderer.cpp
beta-2.0/modelEditor/information/: reference.md
beta-2.0/modelEditor/src/mechanics/export/: GltfExporter.cpp
beta-2.0/modelEditor/src/mechanics/interaction/: Highlight.cpp
beta-2.0/modelEditor/src/scenes/: 3dModeler.cpp  createScene.cpp  menu.cpp  vectorMesh.cpp
